# Dashboard-Sistemas-Operacionais

./: CMakeLists.txt  README.md  main  main.cpp
controller/: DashboardController.cpp  DashboardController.h
model/: ProcessInfo.cpp  ProcessInfo.h  ProcessManager.cpp  ProcessManager.h  SystemInfo.cpp  SystemInfo.h  Worker.cpp  Worker.h
view/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessDetailDialog.cpp  ProcessDetailDialog.h  ProcessDetailDialog.ui
